test/TestPhases/importchecking/invalid/importinternalfrombox.blc

import internal api "box:testlib/api" // whitebox import not allowed

@[EntryPoint]
activity Main()
    var s = ap.hidden()
end